--- a/res/layout/activity_layer_stack.xml
+++ b/res/layout/activity_layer_stack.xml
@@ -72,7 +72,7 @@
   				</RelativeLayout>
             <view android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
-                  class="com.example.slideoutmenu.TouchImageView" android:id="@+id/view"
+                  class="com.region.slideoutmenu.TouchImageView" android:id="@+id/view"
                   android:layout_gravity="left|center_vertical"/>
 
 
